--- a/Python_cheat_sheet.ipynb
+++ b/Python_cheat_sheet.ipynb
@@ -51,7 +51,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
       "metadata": {
         "tags": [],
         "id": "dx3cnLEA6vHm",
-        "outputId": "f7a5e217-3dee-4831-e492-f752ca8078ae",
+        "outputId": "be93fc84-80d7-404a-c457-799a1c59d531",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
@@ -85,7 +85,7 @@
         "\n",
         "display(df)"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -155,7 +155,7 @@
       "metadata": {
         "tags": [],
         "id": "vhrOlKz56vHp",
-        "outputId": "fd987059-4d0b-4d19-a6d4-d5002cc0e91e",
+        "outputId": "45a103c3-1544-4553-ffaf-6645b5b41245",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
@@ -172,7 +172,7 @@
         ")\n",
         "display(df)"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -242,7 +242,7 @@
       "metadata": {
         "tags": [],
         "id": "J_ezQAub6vHs",
-        "outputId": "95e269b0-d10a-4a82-e369-0bfe8a5bb94f",
+        "outputId": "0b243ae2-4834-4305-e0b7-5416a2691e40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
@@ -260,7 +260,7 @@
         "\n",
         "display(df)\n"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -340,7 +340,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zR2KKOQY6vHu",
-        "outputId": "b609d08c-3385-41a9-9038-7d65d12875af",
+        "outputId": "8c4e2298-0a32-4522-a781-4ab7def31173",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -355,7 +355,7 @@
         "\n",
         "mapping\n"
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +367,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 5
         }
       ]
     },
@@ -392,7 +392,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SBRP8mZd6vH0"
+        "id": "SBRP8mZd6vH0",
+        "outputId": "069198c7-e96f-47ea-a315-3afbd3dc3df6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        }
       },
       "source": [
         "# Create a list of weather ratings in logical order\n",
@@ -404,8 +409,20 @@
         "# Examine the head of 'rating'\n",
         "print(weather.rating.head())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-580f37cc4ad4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Change the data type of 'rating' to category\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mweather\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'rating'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mweather\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrating\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'category'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mordered\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategories\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcategory_order\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Examine the head of 'rating'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'weather' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
