--- a/Python_cheat_sheet.ipynb
+++ b/Python_cheat_sheet.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Python_cheat_sheet.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ChrDobbert/Cheat_sheets/blob/main/Python_cheat_sheet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -51,7 +40,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +74,7 @@
         "\n",
         "display(df)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -172,7 +161,7 @@
         ")\n",
         "display(df)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -260,7 +249,7 @@
         "\n",
         "display(df)\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -355,7 +344,7 @@
         "\n",
         "mapping\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +398,7 @@
         "# Examine the head of 'rating'\n",
         "print(weather.rating.head())"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
